fix(pages/entry): fix images being displayed as collapsed

--- a/src/pages/entry/entry.module.css
+++ b/src/pages/entry/entry.module.css
@@ -103,6 +103,7 @@
 
 .entry-contents img {
   max-width: 100%;
+  height: auto;
 }
 
 .entry-contents pre {
